chef-stacktrace.out
Generated at 2012-06-28 11:58:07 +0200
SyntaxError: /home/arturo/dev/extra/chef-workstation/cookbooks/main/recipes/default.rb:30: syntax error, unexpected tIDENTIFIER, expecting $end
package 'opensshserver'
                      ^
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/mixin/from_file.rb:30:in `instance_eval'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/mixin/from_file.rb:30:in `from_file'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/cookbook_version.rb:578:in `load_recipe'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/mixin/language_include_recipe.rb:46:in `load_recipe'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/mixin/language_include_recipe.rb:33:in `block in include_recipe'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/mixin/language_include_recipe.rb:27:in `each'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/mixin/language_include_recipe.rb:27:in `include_recipe'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/run_context.rb:72:in `block in load'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/run_context.rb:69:in `each'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/run_context.rb:69:in `load'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/client.rb:199:in `setup_run_context'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/client.rb:162:in `run'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/application/solo.rb:207:in `block in run_application'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/application/solo.rb:195:in `loop'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/application/solo.rb:195:in `run_application'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/lib/chef/application.rb:70:in `run'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/gems/chef-10.12.0/bin/chef-solo:25:in `<top (required)>'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/bin/chef-solo:19:in `load'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/bin/chef-solo:19:in `<main>'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/bin/ruby_noexec_wrapper:14:in `eval'
/home/arturo/.rvm/gems/ruby-1.9.3-p194/bin/ruby_noexec_wrapper:14:in `<main>'